# puppyone-desktop

./: .env.example  .gitignore  .tmp-viewer-gpu-audit.mjs  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.puppyone/: config.json
contracts/: cloud-project-publish-v1.json  repository-target-v2.json
docs/: DESKTOP_APP_ICON.md  FEATURE.md  README.md  RELEASE.md
editor test/: README.md  english_tone_preview.aiff  english_tone_preview.au  english_tone_preview.caf  puppyone-preview-sample.docx  puppyone-preview-sample.xlsx  sample_config.yaml  sample_image.tiff  sample_markdown.md  sample_page.html  short_portrait_video.avi  short_square_video.avi
electron/: app-preview-runtime.mjs  cloud-auth-service.mjs  main.mjs  plugin-preload.cjs  preload.cjs  update-service.mjs
local-api/: edit-review.mjs  workspace-config.mjs  workspace.mjs
locales/: manifest.json
public/: initial-shell.css  initial-theme.js  interface-style-bootstrap.js
scripts/: build-macos-stable-release.mjs  check-agent-architecture.mjs  check-agent-ui-provenance.mjs  check-automation-plugin-boundaries.mjs  check-bundle-budget.mjs  check-claude-agent-sdk-provenance.mjs  (+38 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/recorder-core/: Cargo.toml
src-tauri/crates/recorder-core/src/: agents.rs  cloud.rs  db.rs  diff.rs  lib.rs  restore.rs  scanner.rs  session.rs  snapshot.rs
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+1119 files in other folders)
