[package]
name = "puppyone-desktop"
version = "0.1.0"
description = "puppyone desktop local agent workspace recorder"
authors = ["puppyone AI"]
license = "Apache-2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
recorder-core = { path = "crates/recorder-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
